feat: [cds-47125]: fixing requested changes
