# 120-ng-manager/src/main/java/io/harness/ng/core/service/resources/OrgServicesApiImpl.java
@@ -47,9 +47,9 @@ public class OrgServicesApiImpl extends AbstractServicesApiImpl implements OrgSe
 
   @NGAccessControlCheck(resourceType = NGResourceType.SERVICE, permission = "core_service_delete")
   @Override
-  public Response deleteOrgScopedService(
-      @OrgIdentifier String org, @ResourceIdentifier String service, @AccountIdentifier String account) {
-    return super.deleteServiceEntity(org, null, service, account);
+  public Response deleteOrgScopedService(@OrgIdentifier String org, @ResourceIdentifier String service,
+      @AccountIdentifier String account, Boolean forceDelete) {
+    return super.deleteServiceEntity(org, null, service, account, forceDelete);
   }
 
   @NGAccessControlCheck(resourceType = NGResourceType.SERVICE, permission = "core_service_view")
